--- a/src/components/form-checks.css
+++ b/src/components/form-checks.css
@@ -77,8 +77,8 @@ input[type="checkbox"] {
   &.check-secondary {
     input[type="checkbox"],
     input[type="radio"] {
-      @apply accent-aeblack-900 text-aeblack-900 border-aeblack-700 before:bg-aeblack-50 border;
-      @apply focus:ring-aeblack-200 disabled:border-aeblack-200;
+      @apply accent-secondary-800 text-secondary-800 border-secondary-700 before:bg-secondary-50 border;
+      @apply focus:ring-secondary-200 disabled:border-secondary-200;
     }
   }
 }
