--- a/src/components/alert.css
+++ b/src/components/alert.css
@@ -26,23 +26,26 @@
     }
     &.alert-with-link {
       @apply flex-1 md:flex md:justify-between;
-      p {
+      /* p {
         @apply mb-0;
-      }
+      } */
       .alert-link {
-        @apply mb-0 mt-3 text-sm md:ml-6 md:mt-0;
+        @apply mb-0 mt-3 text-sm md:ml-6 md:mt-0 flex-shrink-0;
         & a {
-          @apply whitespace-nowrap font-medium no-underline ;
+          @apply whitespace-nowrap font-medium no-underline inline-flex items-center gap-2;
+          & svg{
+            @apply h-5 w-5;
+          }
         }
       }
     }
   }
 
   & > .alert-dismiss {
-    @apply absolute right-2 top-2;
+    @apply absolute end-2 top-2.5;
     & > button {
-      @apply hover:opacity-60;
-      @apply p-2;
+      @apply hover:opacity-60 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-offset-0;
+      @apply rounded p-2;
       & > svg {
         @apply h-5 w-5;
       }
@@ -72,6 +75,11 @@
         @apply text-aered-700 hover:text-aered-600 underline;
       }
     }
+    & > .alert-dismiss {
+      & > button {
+        @apply focus-visible:ring-aered-700;
+      }
+    }
   }
   /* Define Success */
   &.alert-success {
@@ -90,6 +98,11 @@
       }
       & a {
         @apply text-aegreen-700 hover:text-aegreen-600 underline;
+      }
+    }
+    & > .alert-dismiss {
+      & > button {
+        @apply focus-visible:ring-aegreen-700;
       }
     }
   }
@@ -112,6 +125,11 @@
         @apply text-techblue-700 hover:text-techblue-600 underline;
       }
     }
+    & > .alert-dismiss {
+      & > button {
+        @apply focus-visible:ring-techblue-700;
+      }
+    }
   }
   /* Define Warning */
   &.alert-warning {
@@ -132,6 +150,11 @@
         @apply text-camel-700 hover:text-camel-600 underline;
       }
     }
+    & > .alert-dismiss {
+      & > button {
+        @apply focus-visible:ring-camel-700;
+      }
+    }
   }
 
   /* Size definations */
@@ -143,11 +166,31 @@
         @apply h-7 w-7;
       }
     }
+    & .alert-link {
+      & svg,
+      & img {
+        @apply h-6 w-6;
+      }
+    }
     & > .alert-content {
       @apply text-lg;
       & p {
         @apply text-lg;
       }
+      &.alert-with-link {
+        .alert-link {
+          @apply text-base;
+          & a {
+            & svg,
+            & img {
+              @apply h-6 w-6;
+            }
+          }
+        }
+      }
+    }
+    & > .alert-dismiss {
+      @apply top-3;
     }
   }
   &.alert-base {
@@ -157,11 +200,31 @@
         @apply h-6 w-6;
       }
     }
+    & .alert-link {
+      & svg,
+      & img {
+        @apply h-5 w-5;
+      }
+    }
     & > .alert-content {
       @apply text-base;
       & p {
         @apply text-base;
       }
+      &.alert-with-link {
+        .alert-link {
+          @apply text-sm;
+          & a {
+            & svg,
+            & img {
+              @apply h-5 w-5;
+            }
+          }
+        }
+      }
+    }
+    & > .alert-dismiss {
+      @apply top-2.5;
     }
   }
   &.alert-sm {
@@ -171,11 +234,31 @@
         @apply h-5 w-5;
       }
     }
+    & .alert-link {
+      & svg,
+      & img {
+        @apply h-4 w-4;
+      }
+    }
     & > .alert-content {
       @apply text-sm;
       & p {
         @apply text-sm;
       }
+      &.alert-with-link {
+        .alert-link {
+          @apply text-xs;
+          & a {
+            & svg,
+            & img {
+              @apply h-4 w-4;
+            }
+          }
+        }
+      }
+    }
+    & > .alert-dismiss {
+      @apply top-2;
     }
   }
 }
