--- a/src/blocks/blocks.css
+++ b/src/blocks/blocks.css
@@ -1,2 +1,18 @@
 @import "./header/header.css";
 @import "./footer/footer.css";
+
+/* slick dots style */
+
+.aegovs-slider-style {
+    & .slick-dots {
+        @apply flex items-center justify-center gap-3 mt-8 lg:mt-10 xl:mt-12 2xl:mt-14;
+        & button{
+            @apply h-4 w-4 rounded-full bg-aeblack-400 text-[0px] focus:outline-none focus-visible:ring focus-visible:ring-primary-400 ; 
+        }
+       & .slick-active {
+        & button{
+            @apply bg-primary-900 ring-4 ring-primary-600/30;
+        }
+       }
+    }
+}
