--- a/src/components/form-input.css
+++ b/src/components/form-input.css
@@ -13,7 +13,7 @@ input[type="week"],
 [multiple],
 textarea,
 select {
-  @apply text-primary-900 placeholder:text-aeblack-300 block w-fit flex-1 border-0 bg-transparent py-3 text-base leading-6 focus:ring-0;
+  @apply text-primary-900 placeholder:text-aeblack-300 block w-fit flex-1 border-0 bg-transparent py-3 px-4 text-base leading-6 focus:ring-0;
   @apply motion-reduce:transition-none;
   @apply disabled:pointer-events-none disabled:cursor-not-allowed;
 }
@@ -37,7 +37,7 @@ input[type="file"] {
   &:not(:disabled):not([readonly]) {
     @apply cursor-pointer;
   }
-  @apply w-full overflow-hidden border-0 outline-none motion-reduce:transition-none;
+  @apply w-full !py-0 overflow-hidden border-0 outline-none motion-reduce:transition-none;
   @apply file:text-primary-700 file:bg-primary-50 file:me-4 file:h-full file:bg-transparent file:px-4;
   @apply file:focus:shadow-primary-400/20 file:ring-primary-300 file:focus-within:ring-primary-600 focus:outline-primary-500 file:rounded-s file:border-0 file:py-3 file:ring-1 file:ring-inset file:focus-within:ring-2 file:focus-within:ring-inset file:focus:z-10;
   &:hover:not(:disabled):not([readonly])::file-selector-button {
@@ -59,7 +59,7 @@ input[type="file"] {
       }
 
       & > svg {
-        @apply me-1.5 h-6 w-6 fill-current;
+        @apply h-6 w-6 fill-current;
       }
     }
     &:has(:disabled) {
@@ -69,16 +69,16 @@ input[type="file"] {
       @apply border-0 shadow-none ring-0;
     }
     & .control-prefix {
-      @apply ps-3;
+      @apply ps-4;
     }
     & .control-suffix {
-      @apply pe-3;
+      @apply pe-4;
     }
     & input[type="date"],
     input[type="datetime-local"],
     input[type="month"] {
       & + .control-suffix {
-        @apply pointer-events-none absolute right-1 top-2/4 -translate-y-2/4 appearance-none bg-inherit pe-0;
+        @apply pointer-events-none absolute right-3.5 top-2/4 -translate-y-2/4 appearance-none bg-inherit pe-0;
         & svg {
           @apply focus-within:ring-primary-600 focus-within:ring-2 focus-within:ring-inset;
         }
@@ -94,11 +94,11 @@ input[type="file"] {
     }
   }
   & select {
-    @apply text-primary-900 pe-9 ps-3 rtl:bg-[0.5rem] bg-no-repeat;
+    @apply text-primary-900 pe-9 ps-4 rtl:bg-[0.5rem] bg-no-repeat;
     background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%237C5E24' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
   }
   & [multiple]{
-    @apply bg-none pr-3;
+    @apply bg-none pr-4;
   }
   & textarea {
     @apply h-auto;
@@ -111,10 +111,17 @@ input[type="file"] {
     }
     & .form-control-input {
       @apply text-lg;
-      & input,
-      select,
-      textarea {
+      & input {
         @apply py-4 text-lg;
+      }
+      & select {
+        @apply py-4 text-lg;
+      }
+      & textarea {
+        @apply py-4 text-lg;
+      }
+      & input[type="file"]{
+        @apply file:py-4 text-lg h-14;
       }
       & .control-prefix,
       & .control-suffix {
@@ -124,13 +131,46 @@ input[type="file"] {
       }
     }
   }
+  &.control-base {
+    & label {
+      @apply text-sm;
+    }
+    & .form-control-input {
+      @apply text-base;
+      & input {
+        @apply py-3 text-base leading-6;
+      }
+      & select {
+        @apply py-3 text-base leading-6;
+      }
+      & textarea {
+        @apply py-3 text-base leading-6;
+      }
+      & input[type="file"]{
+        @apply file:py-3 text-base h-12;
+      }
+      & .control-prefix,
+      & .control-suffix {
+        & > svg {
+          @apply h-6 w-6;
+        }
+      }
+    }
+  }
   &.control-sm {
     & .form-control-input {
       @apply text-sm;
-      & input,
-      select,
-      textarea {
+      & input {
         @apply py-2 text-sm;
+      }
+      & select {
+        @apply py-2 text-sm;
+      }
+      & textarea {
+        @apply py-2 text-sm;
+      }
+      & input[type="file"]{
+        @apply file:py-2 text-sm h-10;
       }
       & .control-prefix,
       & .control-suffix {
@@ -175,7 +215,7 @@ input[type="file"] {
       }
     }
     & select {
-      @apply text-secondary-900 pe-9 ps-3 rtl:bg-[0.5rem];
+      @apply text-secondary-900 pe-9 ps-4 rtl:bg-[0.5rem];
       background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%233E4046' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
     }
     /* file with drag and drop style */
@@ -243,7 +283,7 @@ input[type="file"] {
       }
     }
     & select {
-      @apply text-aered-900 pe-9 ps-3 rtl:bg-[0.5rem];
+      @apply text-aered-900 pe-9 ps-4 rtl:bg-[0.5rem];
       background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%233E4046' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
     }
     /* file with drag and drop style */
