--- a/src/base/common.css
+++ b/src/base/common.css
@@ -395,7 +395,10 @@ p {
 }
 
 a {
-  @apply text-primary-600 hover:text-primary-500 relative inline-block rounded underline underline-offset-1 transition-all duration-200 ease-in-out hover:decoration-2;
+  @apply text-primary-600 relative inline-block rounded underline underline-offset-1 transition-all duration-200 ease-in-out;
+  @apply hover:text-primary-500 hover:decoration-2;
+  @apply active:text-primary-700;
+  @apply visited:text-primary-600;
   @apply focus-visible:ring-primary-300 focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2;
 }
 
