updates to tooltip and dropdown

--- a/src/components/dropdown.css
+++ b/src/components/dropdown.css
@@ -12,7 +12,7 @@
   }
 }
 .dropdown-item {
-  @apply flex items-center gap-3 rounded-none px-3 py-2;
+  @apply flex items-center gap-3 rounded-none px-3 py-2 text-inherit active:text-inherit visited:text-inherit hover:text-inherit hover:bg-secondary-50 no-underline;
   & svg {
     @apply h-5 w-5 text-current;
   }
