--- a/src/components/button.css
+++ b/src/components/button.css
@@ -7,16 +7,23 @@
   @apply bg-primary-600 text-whitely-50 hover:bg-primary-500 hover:text-primary-50 hover:shadow-button hover:shadow-primary-100 focus-visible:ring-primary-200;
   @apply disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-30 disabled:!shadow-none;
 
+  @apply active:bg-primary-500;
+  @apply visited:text-whitely-50;
+
   /* Style */
   &.btn-soft {
     @apply bg-primary-50 hover:bg-primary-100 text-primary-700 hover:text-primary-600 focus-visible:ring-primary-800 hover:shadow-none focus-visible:ring-offset-0;
     @apply disabled:opacity-50;
+    @apply active:text-primary-600;
+    @apply visited:text-primary-700;
   }
   &.btn-link {
     @apply text-primary-600 hover:bg-primary-50 focus-visible:ring-primary-500 focus-visible:border-primary-500 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
+    @apply visited:text-primary-600;
   }
   &.btn-outline {
     @apply text-primary-600 hover:bg-primary-100 border-primary-600 focus-visible:ring-primary-500 focus-visible:border-primary-500 bg-transparent hover:shadow-none focus-visible:ring-1 focus-visible:ring-offset-0;
+    @apply visited:text-primary-600;
   }
 
   /* Sizing */
