--- a/src/components/button.css
+++ b/src/components/button.css
@@ -6,7 +6,6 @@
   /* all aspects of colour */
   @apply bg-primary-600 text-whitely-50 hover:bg-primary-500 hover:text-primary-50 hover:shadow-button hover:shadow-primary-100 focus-visible:ring-primary-200;
   @apply disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-30 disabled:!shadow-none;
-
   @apply active:bg-primary-500;
   @apply visited:text-whitely-50;
 
@@ -40,6 +39,7 @@
     &:has(svg + svg) {
       @apply px-5;
     }
+
     & > img {
       @apply h-7 w-7;
     }
@@ -75,6 +75,7 @@
     &:has(svg + svg) {
       @apply px-3;
     }
+
     & > img {
       @apply h-5 w-5;
     }
@@ -168,7 +169,7 @@
     &.btn-soft {
       @apply bg-secondary-50 hover:bg-secondary-100 text-secondary-800 hover:text-secondary-800 focus-visible:ring-secondary-200 hover:shadow-none focus-visible:ring-offset-0;
       @apply disabled:opacity-50;
-      @apply active:text-secondary-800
+      @apply active:text-secondary-800;
       @apply visited:text-secondary-800;
     }
 
