--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -17,17 +17,20 @@
   & .logo-item {
     @apply relative;
     &:not(:last-child) {
-      @apply custom-divide-common before:bg-primary-100 me-4 pe-4 before:h-6 before:w-0.5 sm:before:h-8 md:me-5 md:pe-5 md:before:h-10 lg:me-6 lg:pe-6 xl:me-10 xl:pe-10;
+      @apply custom-divide-common before:bg-primary-100 me-4 pe-4 before:h-6 before:w-0.5 sm:before:h-8 md:me-5 md:pe-5 md:before:h-10 lg:me-2 lg:pe-2 xl:me-10 xl:pe-10;
     }
   }
 }
 .logo {
   & img {
-    @apply block h-[3.125rem] w-auto sm:h-[3.75rem] md:h-16 lg:h-[4.688rem] xl:h-[5.375rem] 2xl:h-[6.813rem];
+    @apply block max-h-12 sm:max-h-14 md:max-h-16 lg:max-h-[4.688rem] xl:max-h-20 2xl:max-h-24 max-w-[8.75rem] sm:max-w-[10.625rem] md:max-w-[11.25rem] lg:max-w-[13rem] xl:max-w-[15rem] 2xl:max-w-[25rem];
   }
 }
 .rating-logo {
   @apply inline-block w-8 md:w-10 lg:w-12 xl:w-auto;
+}
+.secondary-logo {
+  @apply w-10 h-10 md:w-16 md:h-16 lg:w-20 lg:h-20 xl:w-[5.625rem] xl:h-[5.625rem] object-contain;
 }
 /* .header-top {
   @apply py-2.5 lg:py-3;
@@ -116,4 +119,8 @@
 } */
 .rounded-bordered {
   @apply border-aeblack-100 rounded-lg border;
+}
+
+.aegov-backdrop + .aegov-backdrop {
+  @apply z-50;
 }
