--- a/src/components/form-input.css
+++ b/src/components/form-input.css
@@ -13,7 +13,7 @@ input[type="week"],
 [multiple],
 textarea,
 select {
-  @apply text-primary-900 placeholder:text-aeblack-300 block w-fit flex-1 border-0 bg-transparent py-3 px-4 text-base leading-6 focus:ring-0;
+  @apply text-primary-900 placeholder:text-aeblack-300 block w-full flex-1 border-0 bg-transparent py-3 px-4 text-base leading-6 focus:ring-0;
   @apply motion-reduce:transition-none;
   @apply disabled:pointer-events-none disabled:cursor-not-allowed;
 }
