--- a/src/components/card.css
+++ b/src/components/card.css
@@ -8,13 +8,11 @@
   }
 }
 .card-element-space:not(.card-lg) {
-  & > *:not(:last-child) {
-    @apply mb-4 md:mb-5 xl:mb-6;
-  }
+    @apply space-y-4 lg:space-y-5 xl:space-y-6;
 }
 .card-lg{
   & > *:not(:last-child) {
-    @apply mb-4 md:mb-6 xl:mb-8;
+    @apply space-y-5 lg:space-y-6 xl:space-y-8;
   }
 }
 
