--- a/src/components/pagination.css
+++ b/src/components/pagination.css
@@ -1,24 +1,24 @@
 .aegov-pagination {
-  @apply inline-flex items-center space-x-1 2xl:space-x-2;
+  @apply inline-flex items-center space-x-1;
   & a {
-    @apply text-lg no-underline xl:text-xl 2xl:text-2xl;
+    @apply text-base no-underline;
   }
   .pages {
-    @apply text-base 2xl:text-lg;
+    @apply text-base;
   }
 }
 .aegov-pagination-first,
 .aegov-pagination-last,
 .aegov-pagination-previous,
 .aegov-pagination-next {
-  @apply text-aeblack-800 hover:text-primary-500 inline-flex items-center gap-2 py-1 no-underline lg:px-2 text-lg xl:text-xl 2xl:text-2xl;
+  @apply text-aeblack-800 hover:text-primary-500 inline-flex items-center gap-2 py-1 no-underline lg:px-1 text-base;
   & svg {
-    @apply h-5 w-5 2xl:h-6 2xl:w-6;
+    @apply h-5 w-5;
   }
 }
 .aegov-pagination-page,
 .aegov-pagination-current {
-  @apply inline-flex h-10 w-10 items-center justify-center rounded-full text-lg 2xl:h-11 2xl:w-11 xl:text-xl 2xl:text-2xl;
+  @apply inline-flex h-8 w-8 items-center justify-center rounded-full text-base;
 }
 .aegov-pagination-page {
   @apply text-aeblack-800 hover:bg-primary-50 hover:text-primary-800;
