--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -37,7 +37,10 @@
   @apply inline-block w-8 md:w-10 lg:w-12 xl:w-auto;
 } */
 .secondary-logo {
-  @apply w-10 h-10 md:w-14 md:h-14 lg:w-16 lg:h-16 xl:w-[5rem] xl:h-[5rem];
+  @apply w-8 h-8 md:w-12 md:h-12 lg:w-14 lg:h-14 xl:w-[4.5rem] xl:h-[4.5rem] object-contain;
+}
+.emblem-logo {
+  @apply w-10 h-10 md:w-12 md:h-12 lg:w-16 lg:h-16 xl:w-[5rem] xl:h-[5rem] object-contain;
 }
 /* .header-top {
   @apply py-2.5 lg:py-3;
